Build new blog FE structure

--- a/profile/index.html
+++ b/profile/index.html
@@ -37,23 +37,11 @@
     <script src="js/collapse.js" defer></script>
     <script src="js/switchLanguage.js" defer></script>
     <script src="../js/nomousekeyboard.js"></script>
-    <!-- <script src="../js/redirect2https.js"></script> -->
+    <script src="../js/redirect2https.js"></script>
 
   </head>
 
   <body class="en">
-
-    <!-- Navibar -->
-    <div lang="en">
-      <div w3-include-html="../navibar/navibar.html"></div>
-      <script src="https://www.w3schools.com/lib/w3.js"></script>
-      <script> w3.includeHTML(); </script>
-    </div>
-    <div lang="zh">
-      <div w3-include-html="../navibar/navibar_zh.html"></div>
-      <script src="https://www.w3schools.com/lib/w3.js"></script>
-      <script> w3.includeHTML(); </script>
-    </div>
 
     <nav id="navibar">
       <!-- Dynamic loading of Navibar -->
